code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_1.wast
(assert_invalid
  (module
    (func $type-void-vs-num (i32.eqz (call 1)))
    (func)
  )
  "type mismatch"
)